add ngx-translate for internationalization and tailwindcss for styling

--- a/src/app/features/components/footer/footer.html
+++ b/src/app/features/components/footer/footer.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="appwrite"></div>
+   
+</div>
+<!-- Copyright Section -->
+<p>&copy; 2025 CEFTI. All rights reserved.</p>
