--- a/src/app/features/components/header/header.html
+++ b/src/app/features/components/header/header.html
@@ -1,1 +1,23 @@
-<p>header works!</p>
+<nav>
+   <div>
+    <img src="" alt="" class="image">
+    <a href="" class="nom">Centre d'Enseignement et de Formation en technique Industrielle</a>
+   </div>
+   <div>
+    <a href="" class="dropdown">Découvrez le CEFTI</a>
+    <a href="" class="programme">Programme d'Etudes et Admission</a>
+    <a href="" class="activity">Activités</a>
+    <a href="" class="employee">Personnels</a>
+    <a href="" class="contact">Nous Joindre</a>
+   </div>
+   <div>
+         <a href="" class="visit">Visitez</a>
+         <a href="" class="schoollife">Requete</a>
+   </div>
+</nav>
+
+
+
+    
+    
+   
