Enhance footer and header components; update favicon and add theme colors

--- a/src/app/features/components/footer/footer.html
+++ b/src/app/features/components/footer/footer.html
@@ -1,2 +1,4 @@
 <!-- Copyright Section -->
-<p>&copy; 2025 CEFTI. All rights reserved.</p>
+<div class="footer">
+    <p>&copy; 2025 CEFTI. All rights reserved.| Powerded by <a href="https://tilstack.me">TilStack</a></p>
+</div>
