--- a/src/app/features/components/header/header.html
+++ b/src/app/features/components/header/header.html
@@ -1,9 +1,8 @@
 <header>
       <nav>
             <div class="logo">
-                  <img src="/assets/images/cefti.png" alt=" " routerLinkActive= "" class="image w-[120px] h-auto font-bold logo-pulse">
-                  <a routerLink="/home" routerLinkActive= "active" class="nom">Centre d'Enseignement et de Formation en technique Industrielle</a>
-            <!-- <app-beta-badge/> -->
+                  <img src="/assets/images/cefti.png" alt=" " routerLinkActive= "">
+                  <!-- <a routerLink="/home" routerLinkActive= "active" class="nom">Centre d'Enseignement et de Formation en technique Industrielle</a>            -->
             </div>
             <ul class="link">
                   <li>
