--- a/src/app/features/components/footer/footer.scss
+++ b/src/app/features/components/footer/footer.scss
@@ -11,7 +11,8 @@
     cursor: pointer;
 
     a{
-        color: #0f2364;
+        color: rgb(20, 121, 174);
         text-decoration: none;
+        font-weight: bold;
     }
 }
