--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,6 @@
 
 
 @theme{
-  --color-primary: #2563eb;
-  --color-secondary: #1e40af;
+  --color-primary: rgb(213, 175, 138);
+  --color-secondary: rgb(20, 121, 174);
 }
