--- a/src/app/features/components/footer/footer.html
+++ b/src/app/features/components/footer/footer.html
@@ -1,4 +1,4 @@
 <!-- Copyright Section -->
 <div class="footer">
-    <p>&copy; 2025 CEFTI. All rights reserved.| Powerded by <a href="https://tilstack.me">TilStack</a></p>
+    <p>&copy; 2025 <span>CEFTI</span>. All rights reserved.| Powerded by <a href="https://tilstack.me">TilStack</a></p>
 </div>
