--- a/src/app/features/components/footer/footer.scss
+++ b/src/app/features/components/footer/footer.scss
@@ -15,4 +15,9 @@
         text-decoration: none;
         font-weight: bold;
     }
+
+    span{
+        font-weight: bold;
+        color: rgb(20, 121, 174);
+    }
 }
