--- a/src/app/features/components/header/header.scss
+++ b/src/app/features/components/header/header.scss
@@ -43,6 +43,8 @@ nav{
             color: #000;
             margin-right: 1.5rem;
             transition: ease-in-out 0.3s;
+            &:hover {
+                color: rgb(20, 121, 174); }
         }
     }  
 }
