--- a/src/app/features/ui/home/home.html
+++ b/src/app/features/ui/home/home.html
@@ -1,3 +1,4 @@
+<h1 i18n> bees</h1>
 <div class="hero-container">
   <div class="hero-content">
     <h1>Shape Your Future at <span>Academy</span></h1>
