--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -14,11 +14,13 @@
   }
 
   .subtitle {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #555;
-    margin-bottom: 2rem;
-    max-width: 700px; // limite la largeur du paragraphe
     line-height: 1.6;
+
+    @media (max-width: 768px) {
+      font-size: 1rem;
+    }
   }
 
   .cards-container {
