remove BetaBadge component; update Section component for alignment and responsiveness

--- a/src/app/features/ui/home/home.html
+++ b/src/app/features/ui/home/home.html
@@ -1,4 +1,4 @@
-<h1 i18n> bees</h1>
+<!-- <h1 i18n> bees</h1> -->
 <div class="hero-container">
   <div class="hero-content">
     <h1>Shape Your Future at <span>Academy</span></h1>
@@ -65,4 +65,9 @@
     ></app-feature-card>
     
   </app-section>
+  <app-section 
+    [centered]="true"
+    title =" Ready to Begin Your Journey?"
+    subtitle = "Take the first step towards a brighter future. Apply to Academy Central today and join our community of scholars and innovators."
+    ></app-section>
 </div>
