--- a/src/app/components/section/section.html
+++ b/src/app/components/section/section.html
@@ -1,4 +1,4 @@
-<div class="section-container">
+<div class="section-container" [class.centered]="centered">
   <h2>{{ title }}</h2>
   <p class="subtitle">{{ subtitle }}</p>
   <div class="cards-container">
