--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -1,8 +1,8 @@
 .section-container {
   margin: 3rem 0;
   padding: 1rem 2rem;
-  text-align: left; // ✅ Alignement à gauche maintenant
-  max-width: 1200px;
+  text-align: left;
+  max-width: 80%;
   margin-left: auto;
   margin-right: auto;
 
@@ -28,5 +28,13 @@
     gap: 1.5rem;
     flex-wrap: wrap;
     justify-content: flex-start; // ✅ les cartes commencent à gauche
+  }
+
+  &.centered {
+    text-align: center;
+
+    .cards-container {
+      justify-content: center;
+    }
   }
 }
