--- a/src/app/features/ui/home/home.html
+++ b/src/app/features/ui/home/home.html
@@ -69,5 +69,9 @@
     [centered]="true"
     title =" Ready to Begin Your Journey?"
     subtitle = "Take the first step towards a brighter future. Apply to Academy Central today and join our community of scholars and innovators."
-    ></app-section>
+    >
+    <div class="hero-buttons">
+      <button class="btn btn-primary">Apply Now</button>
+    </div>  
+  </app-section>
 </div>
