refactor: improve formatting and readability in home.html

--- a/src/app/features/ui/home/home.html
+++ b/src/app/features/ui/home/home.html
@@ -3,8 +3,8 @@
   <div class="hero-content">
     <h1>Shape Your Future at <span>Academy</span></h1>
     <p>
-      Discover a world of opportunities with our diverse programs and vibrant campus
-      community. Apply today and start your journey towards success.
+      Discover a world of opportunities with our diverse programs and vibrant
+      campus community. Apply today and start your journey towards success.
     </p>
     <div class="hero-buttons">
       <button class="btn btn-primary">View Programs</button>
@@ -13,7 +13,8 @@
   </div>
 </div>
 <div>
-  <app-section class="explore-section"
+  <app-section
+    class="explore-section"
     title="Explore Our Academic Excellence"
     subtitle="Academy Central offers a wide range of programs designed to challenge and inspire students. From innovative research opportunities to collaborative learning environments, we provide the tools for your academic journey."
   >
@@ -24,23 +25,22 @@
     ></app-explore-card>
 
     <app-explore-card
-     [imageUrl]="'assets/images/eee.png'"
+      [imageUrl]="'assets/images/eee.png'"
       title="Graduate Studies"
       description="Advance your knowledge and skills with our specialized graduate programs and research opportunities."
     ></app-explore-card>
 
     <app-explore-card
-     [imageUrl]="'assets/images/eee.png'"
+      [imageUrl]="'assets/images/eee.png'"
       title="Online Learning"
       description="Flexible online courses designed to fit your schedule, allowing you to learn from anywhere."
     ></app-explore-card>
 
     <app-explore-card
-     [imageUrl]="'assets/images/ee.png'"
+      [imageUrl]="'assets/images/ee.png'"
       title="Online Learning"
       description="Flexible online courses designed to fit your schedule, allowing you to learn from anywhere."
     ></app-explore-card>
-   
   </app-section>
   <app-section
     title="Experience Campus Life"
@@ -63,15 +63,14 @@
       title="Support Services"
       description="Benefit from comprehensive support services, including academic advising, career counseling, and wellness programs."
     ></app-feature-card>
-    
   </app-section>
-  <app-section 
+  <app-section
     [centered]="true"
-    title =" Ready to Begin Your Journey?"
-    subtitle = "Take the first step towards a brighter future. Apply to Academy Central today and join our community of scholars and innovators."
-    >
+    title=" Ready to Begin Your Journey?"
+    subtitle="Take the first step towards a brighter future. Apply to Academy Central today and join our community of scholars and innovators."
+  >
     <div class="hero-buttons">
       <button class="btn btn-primary">Apply Now</button>
-    </div>  
+    </div>
   </app-section>
 </div>
