Somes modification in footer. Like the form

--- a/src/app/features/components/footer/footer.html
+++ b/src/app/features/components/footer/footer.html
@@ -1,5 +1,28 @@
+<!-- Other Section -->
+<div class="footer2">
+  <div class="footer-column">
+    <h3>About Us</h3>
+    <p>
+      CEFTI is dedicated to providing quality education and fostering a
+      supportive learning environment for all students.
+    </p>
+  </div>
+  <div class="footer-column">
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Programs</a></li>
+      <li><a href="#">Admissions</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+  </div>
+  <div class="footer-column">
+    <h3>Contact Information</h3>
+    <p>Email:</p>
+  </div>
+</div>
 <!-- Copyright Section -->
-<div class="footer">
+<div class="footer1">
   <p>
     &copy; 2025 <span><a href="#">CEFTI</a></span
     >. All rights reserved. | Powerded by
