improve routing structure and enhance header component with dropdown menus

--- a/src/app/components/section/section.html
+++ b/src/app/components/section/section.html
@@ -2,6 +2,7 @@
   <h2>{{ title }}</h2>
   <p class="subtitle">{{ subtitle }}</p>
   <div class="cards-container">
-    <ng-content></ng-content> <!-- Ici on injecte les feature-cards -->
+    <ng-content></ng-content>
+    <!-- Ici on injecte les feature-cards -->
   </div>
 </div>
